--- a/test/suites/special-cases/edge-cases-expected-fails.yaml
+++ b/test/suites/special-cases/edge-cases-expected-fails.yaml
@@ -31,3 +31,6 @@ spec:
       - name: expected-fail-template-not-defined-config-options
       - name: expected-fail-service-readiness-probe
       - name: expected-fail-conditional-step-failed
+      - name: expected-fail-parallel-step-failed
+      - name: expected-fail-parallel-step-timed-out
+      - name: expected-fail-parallel-oomkilled
