--- a/test/selenium/crd-workflow/smoke.yaml
+++ b/test/selenium/crd-workflow/smoke.yaml
@@ -2,6 +2,7 @@ kind: TestWorkflow
 apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: selenium-java-workflow-smoke
+description: "Selenium Java + Standalone Chrome"
 spec:
   content:
     git:
@@ -13,19 +14,27 @@ spec:
     image: maven:3.9.11-eclipse-temurin-17
     workingDir: /data/repo/test/selenium/selenium-java
   services:
-    chrome-standalone:
+    chrome:
       image: selenium/standalone-chrome:112.0-chromedriver-112.0-grid-4.34.0-20250727
+      timeout: 120s # initialization timeout
+      logs: 'always'
+      resources:
+        requests:
+          cpu: 128m
+          memory: 128Mi
       readinessProbe:
         httpGet:
           path: /wd/hub/status
           port: 4444
         periodSeconds: 1
   steps:
-    - name: Run Selenium Java Tests
+    - name: Run test
       run:
         env:
           - name: REMOTE_WEBDRIVER_URL
-            value: 'http://{{ services.chrome-standalone.0.ip }}:4444/wd/hub'
+            value: 'http://{{ services.chrome.0.ip }}:4444/wd/hub'
+          - name: BROWSER
+            value: 'chrome'
         shell: |
           mvn test
           mvn surefire-report:report
