selenium python project updated - pytest -q flag disabled

--- a/test/selenium/selenium-python/pytest.ini
+++ b/test/selenium/selenium-python/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 testpaths = tests
-addopts = -q --junitxml=reports/junit.xml
+addopts = --junitxml=reports/junit.xml
 junit_family = xunit2
