Rename the new ASSIGNED workflow status to PENDING
This name is more aligned with other new status names and this is
the last opportunity to make this change without a significant
breaking change.

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9211,7 +9211,7 @@ components:
       type: string
       enum:
         - queued
-        - assigned
+        - pending
         - starting
         - running
         - pausing
