Create new scheduling status

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9213,6 +9213,7 @@ components:
         - queued
         - pending
         - starting
+        - scheduling
         - running
         - pausing
         - paused
