workflow suites updated

--- a/test/suites/full-smoke.yaml
+++ b/test/suites/full-smoke.yaml
@@ -24,5 +24,6 @@ spec:
       - name: playwright-workflow-suite
       - name: postman-workflow-suite
       - name: pytest-workflow-suite
+      - name: selenium-workflow-suite
       - name: soapui-workflow-suite
       - name: xunit-workflow-suite
