add pushing to gar for api

--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -5,9 +5,13 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
     branches:
       - main
+      - feat/push-to-gar
 env:
   ALPINE_IMAGE: alpine:3.20.6
   BUSYBOX_IMAGE: busybox:1.36.1-musl
+  GAR_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID_PROD }}
+  GAR_LOCATION: ${{ secrets.GAR_LOCATION }}
+  GAR_REPOSITORY: testkube
 
 permissions:
   id-token: write # needed for depot
@@ -28,6 +32,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Setup gcloud SA key for GAR
+        uses: google-github-actions/auth@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+          credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
+
+      - name: Configure Docker for GAR
+        run: gcloud auth configure-docker ${{ env.LOCATION }}-docker.pkg.dev -q
+
       - name: Create Docker tags and metadata for the API
         id: api-meta
         uses: docker/metadata-action@v5
@@ -35,6 +48,7 @@ jobs:
           bake-target: 'api-meta'
           images: |
             kubeshop/testkube-api-server
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-api-server
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
@@ -46,6 +60,7 @@ jobs:
           bake-target: 'tw-init'
           images: |
             kubeshop/testkube-tw-init
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-tw-init
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
@@ -57,45 +72,68 @@ jobs:
           bake-target: 'tw-toolkit'
           images: |
             kubeshop/testkube-tw-toolkit
+            ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GAR_PROJECT_ID }}/${{ env.GAR_REPOSITORY }}/testkube-tw-toolkit
           tags: |
             type=semver,pattern={{version}}
             type=sha,format=short,prefix=
 
-      - name: Build
+      - name: Build (GAR-only on feat/push-to-gar)
+        if: github.ref == 'refs/heads/feat/push-to-gar'
         uses: depot/bake-action@v1
         with:
           files: |
             ./docker-bake.hcl
-            ${{ steps.api-meta.outputs.bake-file }}
-            ${{ steps.tw-toolkit.outputs.bake-file }}
-            ${{ steps.tw-init.outputs.bake-file }}
+            ${{ steps.api-meta-gar.outputs.bake-file }}
+            ${{ steps.tw-toolkit-gar.outputs.bake-file }}
+            ${{ steps.tw-init-gar.outputs.bake-file }}
           targets: api,tw-toolkit,tw-init
           provenance: mode=max
           push: true
           sbom: true
         env:
-          VERSION: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          GIT_SHA: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+          VERSION: ci-${{ github.sha }}
+          GIT_SHA: ${{ github.sha }}
           SLACK_BOT_CLIENT_ID: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_ID}}
           SLACK_BOT_CLIENT_SECRET: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_SECRET}}
           ANALYTICS_TRACKING_ID: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_ID}}
           ANALYTICS_API_KEY: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_SECRET}}
           SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
           CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
+#      - name: Build
+#        uses: depot/bake-action@v1
+#        with:
+#          files: |
+#            ./docker-bake.hcl
+#            ${{ steps.api-meta.outputs.bake-file }}
+#            ${{ steps.tw-toolkit.outputs.bake-file }}
+#            ${{ steps.tw-init.outputs.bake-file }}
+#          targets: api,tw-toolkit,tw-init
+#          provenance: mode=max
+#          push: true
+#          sbom: true
+#        env:
+#          VERSION: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.version'] }}
+#          GIT_SHA: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.revision'] }}
+#          SLACK_BOT_CLIENT_ID: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_ID}}
+#          SLACK_BOT_CLIENT_SECRET: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_SECRET}}
+#          ANALYTICS_TRACKING_ID: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_ID}}
+#          ANALYTICS_API_KEY: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_SECRET}}
+#          SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
+#          CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
 
-      - name: Check if it is a release
-        id: check-tag
-        run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-              echo "match=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Repository Dispatch
-        if: steps.check-tag.outputs.match == 'true'
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.CI_BOT_TOKEN }}
-          repository: kubeshop/helm-charts
-          event-type: release-testkube-api-charts
-          client-payload: '{"RELEASE_VERSION": "${{ env.DOCKER_METADATA_OUTPUT_VERSION }}", "SERVICE": "api"}'
-
+#      - name: Check if it is a release
+#        id: check-tag
+#        run: |
+#          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+#              echo "match=true" >> $GITHUB_OUTPUT
+#          fi
+#
+#      - name: Repository Dispatch
+#        if: steps.check-tag.outputs.match == 'true'
+#        uses: peter-evans/repository-dispatch@v3
+#        with:
+#          token: ${{ secrets.CI_BOT_TOKEN }}
+#          repository: kubeshop/helm-charts
+#          event-type: release-testkube-api-charts
+#          client-payload: '{"RELEASE_VERSION": "${{ env.DOCKER_METADATA_OUTPUT_VERSION }}", "SERVICE": "api"}'
+#
