--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -35,11 +35,11 @@ jobs:
       - name: Setup gcloud SA key for GAR
         uses: google-github-actions/auth@v2
         with:
-          project_id: ${{ env.PROJECT_ID }}
+          project_id: ${{ env.GAR_PROJECT_ID }}
           credentials_json: ${{ secrets.GKE_SA_KEY_PROD }}
 
       - name: Configure Docker for GAR
-        run: gcloud auth configure-docker ${{ env.LOCATION }}-docker.pkg.dev -q
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev -q
 
       - name: Create Docker tags and metadata for the API
         id: api-meta
