--- a/test/special-cases/special-cases-additional.yaml
+++ b/test/special-cases/special-cases-additional.yaml
@@ -18,6 +18,35 @@ spec:
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
+  name: special-cases-long-lasting-90m
+  labels:
+    core-tests: special-cases
+description: "Long lasting workflow - 90 minutes"
+spec:
+  steps:
+  - name: Run test
+    shell: |
+      for iteration in $(seq 1 5400); do
+        echo "Iteration $iteration, sleep (1 second)"
+        sleep 1
+      done
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: special-cases-long-lasting-sleep-90m
+  labels:
+    core-tests: special-cases
+description: "Long lasting workflow - 90 minutes sleep + echo in the end"
+spec:
+  steps:
+  - name: Run test
+    shell: |
+      sleep 5400 && echo "Sleep finished after 90 minutes"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
   name: special-cases-service-name-with-dash  # only . notation is supported (https://linear.app/kubeshop/issue/TKC-4047/)
   labels:
     core-tests: special-cases
